v19.2
- Fixed Wormwood getting a speed boost from bloom
- Fixed players dropping souls when dying near a Wortox player
- Fixed a bug where the dead player spectating (aka spectator spinner) system did not list players properly
- Fixed a bug where attempting to despawn at the wrong time did not tell players why they can't despawn
- Fixed a bug where parrying the explosion of thrown hearthsfire crystals did damage to the thrower


- Players can no longer despawn while a match is starting
- Entering or exiting spectator mode while a match is starting will no longer cause team imbalances (assuming
  number of players without the spectators is even)
- Hearthsfire Crystals will land significantly faster if thrown close to the user
- Updated various strings

v19.3
Fixed a typo

v19.4
- Fixed bug where Wortox spawns a soul upon death
- Fixed a bug where Wurt would get attacked by Pigmen without provoking them

- Hearthsfire Crystals now do strong knockback if blown up through melee attacks
- Wormwood will no longer spawn in bloom
- Wormwood in full bloom no longer creates flowers on the ground (test)